--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -1,6 +1,6 @@
-name: widgetbook
+name: widgetbook_workspace
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,11 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  widgetbook: ^3.19.0
+  widgetbook_annotation: ^3.8.0
+
+  demoapp:
+    path: ../
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  widgetbook_generator: ^3.19.0
+  build_runner: ^2.10.1
 
 flutter:
   uses-material-design: true
