--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   widgetbook: ^3.19.0
   widgetbook_annotation: ^3.8.0
+  mocktail: ^1.0.0
 
   demoapp:
     path: ../
